--- a/package.json
+++ b/package.json
@@ -1,22 +1,33 @@
 {
   "name": "plox-notes-2",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "scripts": {
-    "dev": "node server.js",
-    "build": "next build",
-    "start": "NODE_ENV=production node server.js"
+    "dev": "nodemon",
+    "build": "next build && tsc --project tsconfig.server.json",
+    "start": "cross-env NODE_ENV=production node dist/index.js"
   },
   "dependencies": {
+    "cross-env": "7.0.2",
     "next": "9.5.1",
+    "nodemon": "2.0.4",
     "pg": "8.3.0",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "socket.io": "2.3.0",
+    "socket.io-client": "2.3.0",
+    "ts-node": "8.10.2",
+    "uuid": "^8.3.0"
   },
   "devDependencies": {
     "@types/node": "14.0.27",
+    "@types/pg": "7.14.4",
     "@types/react": "16.9.44",
     "@types/react-dom": "16.9.8",
-    "typescript": "3.9.7"
-  }
+    "@types/socket.io": "2.1.10",
+    "@types/socket.io-client": "1.4.33",
+    "@types/uuid": "^8.0.1",
+    "typescript": "beta"
+  },
+  "//": "typescript needs to be 4 (currently beta) due to this: https://github.com/microsoft/TypeScript/issues/38383"
 }
