--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "cross-env": "7.0.2",
+    "lodash": "4.17.19",
     "next": "9.5.1",
     "nodemon": "2.0.4",
     "pg": "8.3.0",
@@ -17,16 +18,17 @@
     "socket.io": "2.3.0",
     "socket.io-client": "2.3.0",
     "ts-node": "8.10.2",
-    "uuid": "^8.3.0"
+    "uuid": "8.3.0"
   },
   "devDependencies": {
+    "@types/lodash": "4.14.159",
     "@types/node": "14.0.27",
     "@types/pg": "7.14.4",
     "@types/react": "16.9.44",
     "@types/react-dom": "16.9.8",
     "@types/socket.io": "2.1.10",
     "@types/socket.io-client": "1.4.33",
-    "@types/uuid": "^8.0.1",
+    "@types/uuid": "8.0.1",
     "typescript": "beta"
   },
   "//": "typescript needs to be 4 (currently beta) due to this: https://github.com/microsoft/TypeScript/issues/38383"
