--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "pg": "8.3.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-flip-move": "3.0.4",
     "socket.io": "2.3.0",
     "socket.io-client": "2.3.0",
     "ts-node": "8.10.2",
