Fix some release script errors

--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "@types/socket.io": "2.1.10",
     "@types/socket.io-client": "1.4.33",
     "@types/uuid": "8.0.1",
-    "typescript": "beta"
+    "typescript": "4.0.1-rc"
   },
   "//": "typescript needs to be 4 (currently beta) due to this: https://github.com/microsoft/TypeScript/issues/38383"
 }
