--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,6 @@
     "strict": true,
     "target": "esnext"
   },
-  "exclude": ["dist", ".next", "out", "next.config.js"],
+  "exclude": ["dist", ".next", "out", "next.config.js", "node_modules"],
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"]
 }
