--- a/package.json
+++ b/package.json
@@ -13,6 +13,14 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@types/lodash": "4.14.159",
+    "@types/node": "14.0.27",
+    "@types/pg": "7.14.4",
+    "@types/react": "16.9.44",
+    "@types/react-dom": "16.9.8",
+    "@types/socket.io": "2.1.10",
+    "@types/socket.io-client": "1.4.33",
+    "@types/uuid": "8.0.1",
     "cross-env": "7.0.2",
     "lodash": "4.17.19",
     "next": "9.5.1",
@@ -24,27 +32,18 @@
     "socket.io": "2.3.0",
     "socket.io-client": "2.3.0",
     "ts-node": "8.10.2",
+    "typescript": "4.0.1-rc",
     "uuid": "8.3.0"
   },
   "devDependencies": {
-    "@types/lodash": "4.14.159",
-    "@types/node": "14.0.27",
-    "@types/pg": "7.14.4",
-    "@types/react": "16.9.44",
-    "@types/react-dom": "16.9.8",
-    "@types/socket.io": "2.1.10",
-    "@types/socket.io-client": "1.4.33",
-    "@types/uuid": "8.0.1",
     "@typescript-eslint/eslint-plugin": "3.8.0",
     "@typescript-eslint/parser": "3.8.0",
     "eslint": "7.6.0",
     "eslint-config-prettier": "6.11.0",
     "husky": "4.2.5",
     "lint-staged": "10.2.11",
-    "prettier": "2.0.5",
-    "typescript": "4.0.1-rc"
+    "prettier": "2.0.5"
   },
-  "//": "typescript needs to be 4 (currently beta) due to this: https://github.com/microsoft/TypeScript/issues/38383",
   "husky": {
     "hooks": {
       "pre-commit": "npm run pre-commit",
