--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-flip-move": "3.0.4",
+    "react-textarea-autosize": "8.2.0",
     "socket.io": "2.3.0",
     "socket.io-client": "2.3.0",
     "ts-node": "8.10.2",
