--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "@typescript-eslint/parser": "3.9.0",
     "eslint": "7.6.0",
     "eslint-config-prettier": "6.11.0",
+    "eslint-plugin-react": "7.20.6",
+    "eslint-plugin-react-hooks": "4.0.8",
     "husky": "4.2.5",
     "lint-staged": "10.2.11",
     "prettier": "2.0.5"
