--- a/package.json
+++ b/package.json
@@ -16,24 +16,24 @@
     "@types/lodash": "4.14.159",
     "@types/node": "14.0.27",
     "@types/pg": "7.14.4",
-    "@types/react": "16.9.46",
+    "@types/react": "16.9.49",
     "@types/react-dom": "16.9.8",
     "@types/socket.io": "2.1.11",
     "@types/socket.io-client": "1.4.33",
-    "@types/uuid": "8.0.1",
+    "@types/uuid": "8.3.0",
     "cross-env": "7.0.2",
-    "lodash": "4.17.19",
-    "next": "9.5.2",
+    "lodash": "4.17.20",
+    "next": "9.5.3",
     "nodemon": "2.0.4",
-    "pg": "8.3.0",
+    "pg": "8.3.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-flip-move": "3.0.4",
     "react-textarea-autosize": "8.2.0",
     "socket.io": "2.3.0",
     "socket.io-client": "2.3.0",
-    "ts-node": "8.10.2",
-    "typescript": "4.0.1-rc",
+    "ts-node": "9.0.0",
+    "typescript": "4.0.3",
     "uuid": "8.3.0"
   },
   "devDependencies": {
@@ -43,9 +43,9 @@
     "eslint-config-prettier": "6.11.0",
     "eslint-plugin-react": "7.20.6",
     "eslint-plugin-react-hooks": "4.0.8",
-    "husky": "4.2.5",
-    "lint-staged": "10.2.11",
-    "prettier": "2.0.5"
+    "husky": "4.3.0",
+    "lint-staged": "10.4.0",
+    "prettier": "2.1.2"
   },
   "husky": {
     "hooks": {
