--- a/package.json
+++ b/package.json
@@ -10,20 +10,21 @@
     "pre-commit": "lint-staged",
     "pre-push": "npm run lint && npm run typecheck",
     "start": "cross-env NODE_ENV=production node dist/server/index.js",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@types/lodash": "4.14.170",
-    "@types/node": "15.12.1",
+    "@types/node": "16.0.0",
     "@types/pg": "8.6.0",
-    "@types/react": "17.0.9",
-    "@types/react-dom": "17.0.6",
+    "@types/react": "17.0.13",
+    "@types/react-dom": "17.0.8",
     "@types/socket.io": "3.0.2",
     "@types/socket.io-client": "3.0.0",
-    "@types/uuid": "8.3.0",
+    "@types/uuid": "8.3.1",
     "cross-env": "7.0.3",
     "lodash": "4.17.21",
-    "next": "10.2.3",
+    "next": "11.0.1",
     "pg": "8.6.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -32,26 +33,20 @@
     "socket.io": "4.1.2",
     "socket.io-client": "4.1.2",
     "ts-node": "10.0.0",
-    "typescript": "4.3.2",
+    "typescript": "4.3.5",
     "uuid": "8.3.2"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "4.26.0",
-    "@typescript-eslint/parser": "4.26.0",
-    "eslint": "7.28.0",
+    "@typescript-eslint/eslint-plugin": "4.28.1",
+    "@typescript-eslint/parser": "4.28.1",
+    "eslint": "7.30.0",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-react": "7.24.0",
     "eslint-plugin-react-hooks": "4.2.0",
-    "husky": "4.3.8",
+    "husky": "7.0.0",
     "lint-staged": "11.0.0",
-    "nodemon": "2.0.7",
-    "prettier": "2.3.1"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm run pre-commit",
-      "pre-push": "npm run pre-push"
-    }
+    "nodemon": "2.0.9",
+    "prettier": "2.3.2"
   },
   "lint-staged": {
     "*.{json,md,css,scss}": [
