--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "uuid": "8.3.2"
   },
   "devDependencies": {
+    "@next/eslint-plugin-next": "11.0.1",
     "@typescript-eslint/eslint-plugin": "4.28.1",
     "@typescript-eslint/parser": "4.28.1",
     "eslint": "7.30.0",
