--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "*.{json,md,css,scss}": [
       "prettier --write"
     ],
-    "*.{js,jsx,ts,tsx}": [
+    "*.{ts,tsx}": [
       "node ./node_modules/eslint/bin/eslint.js --ext .ts --ext .tsx --fix",
       "prettier --write"
     ]
