--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,8 @@
     "skipLibCheck": true,
     "sourceMap": true,
     "strict": true,
-    "target": "esnext"
+    "target": "esnext",
+    "incremental": true
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["dist", ".next", "out", "next.config.js", "node_modules"]
