--- a/package.json
+++ b/package.json
@@ -14,40 +14,40 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@types/lodash": "4.14.177",
+    "@types/lodash": "4.14.178",
     "@types/node": "16.0.0",
-    "@types/pg": "8.6.1",
-    "@types/react": "17.0.37",
+    "@types/pg": "8.6.4",
+    "@types/react": "17.0.38",
     "@types/react-dom": "17.0.11",
     "@types/socket.io": "3.0.2",
     "@types/socket.io-client": "3.0.0",
-    "@types/uuid": "8.3.3",
+    "@types/uuid": "8.3.4",
     "cross-env": "7.0.3",
     "husky": "7.0.4",
     "lodash": "4.17.21",
-    "next": "12.0.5-canary.10",
+    "next": "12.0.8",
     "pg": "8.7.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-flip-move": "3.0.4",
     "react-textarea-autosize": "8.3.3",
-    "socket.io": "4.4.0",
-    "socket.io-client": "4.4.0",
+    "socket.io": "4.4.1",
+    "socket.io-client": "4.4.1",
     "ts-node": "10.4.0",
-    "typescript": "4.5.2",
+    "typescript": "4.5.5",
     "uuid": "8.3.2"
   },
   "devDependencies": {
-    "@next/eslint-plugin-next": "12.0.4",
-    "@typescript-eslint/eslint-plugin": "5.4.0",
-    "@typescript-eslint/parser": "5.4.0",
-    "eslint": "8.3.0",
+    "@next/eslint-plugin-next": "12.0.8",
+    "@typescript-eslint/eslint-plugin": "5.10.0",
+    "@typescript-eslint/parser": "5.10.0",
+    "eslint": "8.7.0",
     "eslint-config-prettier": "8.3.0",
-    "eslint-plugin-react": "7.27.1",
+    "eslint-plugin-react": "7.28.0",
     "eslint-plugin-react-hooks": "4.3.0",
-    "lint-staged": "12.1.2",
+    "lint-staged": "12.3.1",
     "nodemon": "2.0.15",
-    "prettier": "2.5.0"
+    "prettier": "2.5.1"
   },
   "lint-staged": {
     "*.{json,md,css,scss}": [
