--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,22 @@
+version: '3.8'
 services:
   web:
     build: .
     ports:
       - '8080:8080'
     restart: always
+  db:
+    image: postgres:16
+    restart: always
     environment:
-      POSTGRES_PASSWORD: example
+      - POSTGRES_USER=postgres
+      - POSTGRES_DB=ploxnotes
+      - POSTGRES_PASSWORD=postgres
+    ports:
+      - '5432:5432'
+    volumes:
+      - db:/var/lib/postgresql/data
+      - ./db/:/docker-entrypoint-initdb.d/
+volumes:
+  db:
+    driver: local
