Fix a bunch of docker stuff

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   web:
     build: .
     ports:
-      - '8080:8080'
+      - '8088:8080'
     restart: always
   db:
     image: postgres:16
@@ -19,4 +19,5 @@ services:
       - ./db/:/docker-entrypoint-initdb.d/
 volumes:
   db:
+    # what was driver? Can it be removed?
     driver: local
