--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -1,10 +1,6 @@
+# This one only has the database, so we can run dev-mode on the local machine
 version: '3.8'
 services:
-  web:
-    build: .
-    ports:
-      - '8088:3000'
-    restart: always
   db:
     image: postgres:16
     restart: always
@@ -12,9 +8,8 @@ services:
       - POSTGRES_USER=postgres
       - POSTGRES_DB=ploxnotes
       - POSTGRES_PASSWORD=postgres
-    # "ports" are only needed if we want them exposed to the world at large:
-    # ports:
-    # - '5432:5432'
+    ports:
+    - '5432:5432'
     volumes:
       - db:/var/lib/postgresql/data
       - ./db/:/docker-entrypoint-initdb.d/
